--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 version: "3"
 services:
     ubuntu:
-       image: pradeep113/ubuntu-new:35
+       image: pradeep113/ubuntu-new:${TAG}
        container_name: Myubuntucontainer
